fix(risk-factors-radios): mandatory fields fix #16

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -78,6 +78,8 @@
   --validate-dark: #466964;
   --validate-non-text: #00ac8c;
 
+  --warning-bg: #ffdbe1;
+
   /*sizes*/
   --size-smaller: 0.2rem;
   --size-small: 0.5rem;
