--- a/public/css/main.css
+++ b/public/css/main.css
@@ -148,11 +148,13 @@ html {
 ::-moz-selection {
   background: #b3d4fc;
   text-shadow: none;
+  cursor:pointer;
 }
 
 ::selection {
   background: #b3d4fc;
   text-shadow: none;
+  cursor:pointer;
 }
 
 /*
