--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,7 +23,7 @@
   font-family: "Marianne";
   font-style: normal;
   font-weight: normal;
-  src: url(../fonts/Marianne-Bold.woff2) format("woff2"), url(../fonts/Marianne-Bold.woff) format("woff");
+  src: url(../fonts/Marianne-Regular.woff2) format("woff2");
 }
 
 @font-face {
